--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-screens": "^3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
