--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-router": "^5.1.20",
     "expo": "~48.0.10",
+    "expo-camera": "~13.2.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-module-scripts": "^3.0.7",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.19.1",
     "react": "18.2.0",
@@ -30,9 +33,7 @@
     "react-native-web": "~0.18.10",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "expo-camera": "~13.2.1",
-    "expo-image-picker": "~14.1.1"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
